# chainmcmc

./: CMakeLists.txt  Doxyfile.in  README.md  autotest.sh
examples/: friel_pettitt.cc  han_markov_2001.cc  mixture_model.cc  normal_distribution.cc  radiata_pine.cc
include/chainmcmc/: chain.hh  chainmcmc.hh  file.hh  logger.hh  mcmc.hh  parameter.hh  prior.hh  temperature.hh  trace.hh
src/chainmcmc/: chain.cc  file.cc  logger.cc  prior.cc  temperature.cc  trace.cc
tests/: test_chain.h  test_complete.h  test_file.h  test_log.h  test_prior.h
